EXTRA_DIST = \
	all.dsp \
	all.dsw \
	audiofile.def \
	build_all.bat \
	clean_all.bat \
	clean_dist.bat \
	config.h \
	dynamiclib.dep \
	dynamiclib.dsp \
	dynamiclib.mak \
	dynmodules.dep \
	dynmodules.dsp \
	dynmodules.mak \
	lib.dsw \
	modules.dep \
	modules.dsp \
	modules.mak \
	prebuild.bat \
	README.win32 \
	sfcommands.dsp \
	sfconvert.dep \
	sfconvert.dsp \
	sfconvert.mak \
	sfinfo.dep \
	sfinfo.dsp \
	sfinfo.mak \
	staticlib.dep \
	staticlib.dsp \
	staticlib.mak
